Add createTournament method in TournamentController and corresponding route. Implement user retrieval in UserController. Update UserDto and User model to include tournaments. Enhance file upload handling in FileService for tournament covers. Add new translations for tournament-related messages in English and Russian. Update admin seeder with new email.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -23,7 +23,9 @@
 		"activation_link_expired": "Activation link has expired. A new activation link has been sent to your email.",
 		"failed_create_user": "Failed to create user!",
 		"failed_activate_account": "Failed to activate account!",
-		"api_key_invalid": "API key is invalid."
+		"api_key_invalid": "API key is invalid.",
+		"tournament_already_exists": "Tournament on the {{exchange}} exchange already exists!",
+		"already_joined": "You have already joined this tournament!"
 	},
 	"success": {
 		"file_saved": "File saved successfully!",
